removed remindertime, ty
